--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -10,12 +10,11 @@
             size_hint: 0.4, 0.4
         ButtonSound:
             source: os.getcwd() + "/data/sound_off_on1.png"
-            #source: os.getcwd() + "/b_Sound2.png"
             pos_hint: {'center_x': 0.09, 'center_y': 0.05}
             size_hint: 0.4, 0.4
             on_press: root.manager.get_screen('game').sound_play()
             on_press: root.manager.get_screen('game').self_active()
-        ButtonColorWord:
+        ButtonHelp:
             source: os.getcwd() + "/data/Button-Color-Word.png"
             size_hint: 0.6, 0.25
             pos_hint: {'center_x': 0.5, 'center_y': 0.63}
@@ -26,7 +25,7 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.63}
-        ButtonMenuRepeat:
+        ButtonHelp:
             source: os.getcwd() + "/data/Button-Repeat-Mode.png"
             size_hint: 0.6, 0.25
             pos_hint: {'center_x': 0.5, 'center_y': 0.47}
@@ -37,7 +36,7 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.47}
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -46,27 +45,12 @@
             text: "Exit"
             font_size: 20
             color: 0,0,0,1
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
 
 <MenuScreenRepeat>:
     Image:
         source: os.getcwd() + "/data/CR_fond_P2.png"
     FloatLayout:
-        #ButtonStart:
-         #   source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
-          #  pos_hint: {'center_x': 0.5, 'center_y': 0.75}
-           # size_hint: 0.6, 0.25
-            #on_press: root.manager.current = 'game-repeat'
-            #on_press: root.manager.get_screen('game-repeat').start_started(1)
-            #on_press: root.manager.get_screen('game-repeat').ini()
-            #on_press: root.manager.get_screen('game-repeat').easy()
-            #on_press: root.manager.get_screen('game-repeat').remember()
-        #Label:
-            #text: root.text_easiest
-            #font_size: 20
-            #color: 0,0,0,1
-            #pos_hint: {'center_x': 0.5, 'center_y': 0.75}
         ButtonHelp:
             source: os.getcwd() + "/data/scores.png"
             pos_hint: {'center_x': 0.09, 'center_y': 0.05}
@@ -83,13 +67,9 @@
         ButtonStart:
             source: os.getcwd() + "/data/Button-Repeat-Mode-Easiest-Empty.png"
             pos_hint: {'center_x': 0.5, 'center_y': 0.63}
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.58}
             size_hint: 0.6, 0.25
             text: "Start"
             on_press: root.manager.current = 'game-repeat'
-            #on_press: root.manager.get_screen('game-repeat').start_started(1)
-            #on_press: root.manager.get_screen('game-repeat').ini()
-            #on_press: root.manager.get_screen('game-repeat').hard()
             on_press: root.manager.get_screen('loose').best_score_medium()
             on_press: root.manager.get_screen('game-repeat').remember()
             on_press: root.manager.get_screen('game-repeat').button_start_pushed()
@@ -100,32 +80,12 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.63}
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.58}
-        # ButtonStart:
-            #source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
-            #pos_hint: {'center_x': 0.5, 'center_y': 0.41}
-            #size_hint: 0.6, 0.25
-            #text: "Start"
-            #on_press: root.manager.current = 'game-repeat'
-            #on_press: root.manager.get_screen('game-repeat').start_started(1)
-            #on_press: root.manager.get_screen('game-repeat').ini()
-            #on_press: root.manager.get_screen('game-repeat').easy()
-            #on_press: root.manager.get_screen('game-repeat').forgot()
-        #Label:
-            #text: root.text_medium
-            #font_size: 20
-            #color: 0,0,0,1
-            #pos_hint: {'center_x': 0.5, 'center_y': 0.41}
         ButtonStart:
             source: os.getcwd() + "/data/Button-Repeat-Mode-Easiest-Empty.png"
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
             pos_hint: {'center_x': 0.5, 'center_y': 0.48}
             size_hint: 0.6, 0.25
             text: "Start"
             on_press: root.manager.current = 'game-repeat'
-            #on_press: root.manager.get_screen('game-repeat').start_started(1)
-            #on_press: root.manager.get_screen('game-repeat').ini()
-            #on_press: root.manager.get_screen('game-repeat').hard()
             on_press: root.manager.get_screen('loose').best_score_hard()
             on_press: root.manager.get_screen('game-repeat').forgot()
             on_press: root.manager.get_screen('game-repeat').button_start_pushed()
@@ -135,9 +95,8 @@
             text: root.text_hard
             font_size: 20
             color: 0,0,0,1
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
             pos_hint: {'center_x': 0.5, 'center_y': 0.48}
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -146,7 +105,6 @@
             text: "Return"
             font_size: 20
             color: 0,0,0,1
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
 
 <GameScreenRepeat>:
@@ -182,7 +140,6 @@
             on_press: root.bt1_pressed()
             on_press: app.score_repeat = str(root.level-1)
         ButtonHelp:
-            # source: os.getcwd() + "/btpush2.png"
             source: os.getcwd() + "/data/btpush4-moreshadow.png"
             pos_hint: {'center_x': 0.74, 'center_y': 0.68}
             id: bt2
@@ -213,22 +170,6 @@
         height: root.height
         width: root.width + 100
         spacing: 8
-        # BoxLayout:
-        #    Label:
-        #        pos_hint: {'center_x': 0.5, 'y': 0.4}
-        #        font_size: 18
-        #        text: " Mute/Unmute"
-        #        color: 0,0,0,1
-        #    CheckBox:
-        #        pos_hint: {'center_x': 0.5, 'y': 0.4}
-        #        on_press: root.manager.get_screen('game').sound_play()
-        #        on_active: root.manager.get_screen('game').self_active()
-        #ButtonColorWord:
-        #    source: os.getcwd() + "/sound_on_off.png"
-        #    pos_hint: {'center_x': 0.9, 'center_y': 0.85}
-        #    size_hint: 0.2, 0.2
-        #    on_press: root.manager.get_screen('game').self_active()
-        #    on_press: root.manager.get_screen('game').sound_play()
         ButtonHelp:
             source: os.getcwd() + "/data/scores.png"
             pos_hint: {'center_x': 0.09, 'center_y': 0.05}
@@ -245,7 +186,6 @@
         ButtonColours:
             source: os.getcwd() + ("/data/Button_purple.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.62}
-            #pos_hint: {'center_x': 0.5, 'y': 0.6}
             size_hint: 0.6, 0.25
             on_press: root.sound_validation()
             on_press: root.start_color_mode()
@@ -254,7 +194,6 @@
         ButtonText:
             source: os.getcwd() + ("/data/Button_purple.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.45}
-            # pos_hint: {'center_x': 0.5, 'y': 0.37}
             size_hint: 0.6, 0.25
             on_press: root.start_text_mode()
             on_press: root.sound_validation()
@@ -270,7 +209,7 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.45}
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -279,7 +218,6 @@
             text: "Return"
             font_size: 20
             color: 0,0,0,1
-            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
 
 <GameScreen>:
@@ -290,7 +228,6 @@
         orientation: 'vertical'
         BoxLayout:
             size_hint_y: None
-            # spacing: 5
             BoxLayout:
                 spacing: 10
                 BoxLayout:
@@ -299,40 +236,10 @@
                         text: "Time Mode"
                         color: 0,0,0,1
                     Switch:
-                        # pos_hint: {'center_x': 0.48, 'y': 0.25}
                         on_active: root.sound_play()
                         on_active: root.change_time_mode()
                         active: root.active
-                #BoxLayout:
-                    # padding: [1, 1, 1, 1]
-                    # spacing: 25
-                 #   Label:
-                  #      font_size: 18
-                   #     text: " Mute/Unmute"
-                    #CheckBox:
-                     #   on_press: root.sound_play()
-                      #  on_active: root.self_active()
-       # BoxLayout:
-        #    size_hint_y: None
-         #   Label:
-          #      id: welcome_text
-           #     font_size: 21
-            #    size_hint_y: None
-             #   height: 100
-              #  text: root.text
-               # bold: True
-                #color: 0,0,0,1
-            #Label:
-             #   id: points
-              #  font_size: 20
-               # size_hint_y: None
-               # height: 100
-               # text: str(root.points_str)
-               # color: 0,0,0,1
         FloatLayout:
-            # spacing: [10, 10]
-            # padding: [10, 10, 10, 10]
-            # cols: 2
             Label:
                 pos_hint: {'center_x': 0.3, 'center_y': 1}
                 id: welcome_text
@@ -356,7 +263,6 @@
                 size_hint: 0.5, 0.5
                 pos_hint: {'center_x': 0.25, 'center_y': 0.2}
                 text: root.texts[0]
-                # color: root.colors[0]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -371,10 +277,8 @@
                 source: os.getcwd() + "/data/btpush1.png"
                 id: bt2
                 size_hint: 0.5, 0.5
-                # size: root.width/4, root.height/4
                 pos_hint: {'center_x': 0.74, 'center_y': 0.73}
                 text: root.texts[1]
-                # color: root.colors[1]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -389,10 +293,8 @@
                 source: os.getcwd() + "/data/btpush1.png"
                 id: bt3
                 size_hint: 0.5, 0.5
-                # size: root.width/8, root.height/8
                 pos_hint: {'center_x': 0.74, 'center_y': 0.2}
                 text: root.texts[2]
-                # color: root.colors[2]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -407,10 +309,8 @@
                 source: os.getcwd() + "/data/btpush1.png"
                 id: bt4
                 size_hint: 0.5, 0.5
-                # size: root.width/4, root.height/4
                 pos_hint: {'center_x': 0.25, 'center_y': 0.73}
                 text: root.texts[3]
-                # color: root.colors[3]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -422,7 +322,6 @@
                 on_press: root.count_points(3)
                 on_press: app.text_3 = str(root.no_points)
             Buttonmy:
-                # source: ("/home/user/Programmes/brain-color-game3/brain-color-game/blue.png")
                 size_hint: 0.1, 0.1
                 id: bt_q
                 background_color: [0.76, 0.255, 0.7, 1]
@@ -431,13 +330,11 @@
                 on_press: root.start()
                 on_press: root.count_points(5)
                 font_size: 40
-                # size_hint: 0.3, 0.3
                 pos_hint: {'center_x': 0.5, 'center_y': 0.5}
                 color: 0,0,0,1
             Buttonmy:
                 text: root.texts[0]
                 color: root.colors[0]
-                # text: root.text_button
                 id: bt1b
                 size_hint: 0.1, 0.1
                 font_size: 40
@@ -453,7 +350,6 @@
             Buttonmy:
                 text: root.texts[1]
                 color: root.colors[1]
-                # text: root.text_button
                 id: bt2b
                 size_hint: 0.1, 0.1
                 font_size: 40
@@ -469,7 +365,6 @@
             Buttonmy:
                 text: root.texts[2]
                 color: root.colors[2]
-                # text: root.text_button
                 id: bt3b
                 size_hint: 0.1, 0.1
                 font_size: 40
@@ -485,7 +380,6 @@
             Buttonmy:
                 text: root.texts[3]
                 color: root.colors[3]
-                # text: root.text_button
                 id: bt4b
                 size_hint: 0.1, 0.1
                 font_size: 40
@@ -504,12 +398,6 @@
     Image:
         source: os.getcwd() + "/data/BCG_fond.png"
     FloatLayout:
-        # canvas.before:
-          #  Color:
-           #     rgba: 0.11, 0.055, 0.23, 1
-            #Rectangle:
-             #   pos: self.pos
-              #  size: self.size
         size: root.size
         pos: root.pos
         orientation: 'vertical'
@@ -558,7 +446,7 @@
     Image:
         source: os.getcwd() + "/data/GameScreen_fond.png"
     FloatLayout:
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -583,7 +471,7 @@
     Image:
         source: os.getcwd() + "/data/GameScreenRepeat_fond.png"
     FloatLayout:
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -615,7 +503,7 @@
             font_size: 25
             bold: True
             text: "No more Lifes !"
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -632,7 +520,6 @@
             text: "Level"
         Label:
             id: scorelabel
-            # text: str(root.score)
             text: app.score_repeat
             font_size: 35
             bold: True
@@ -654,7 +541,7 @@
     Image:
         source: os.getcwd() + "/data/ColorWord_fond.png"
     FloatLayout:
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
@@ -696,7 +583,7 @@
     Image:
         source: os.getcwd() + "/data/Scores_Color_Repeat_fond.png"
     FloatLayout:
-        ButtonExit:
+        ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
