--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -21,7 +21,7 @@
             on_press: root.manager.current = 'menu'
             on_press: root.manager.get_screen('menu').sound_validation()
         Label:
-            text: "Color Word"
+            text: root.color_word
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.63}
@@ -32,7 +32,7 @@
             on_press: root.manager.current = 'menu-repeat'
             on_press: root.manager.get_screen('menu').sound_validation()
         Label:
-            text: "Color Repeat"
+            text: root.color_repeat
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.47}
@@ -42,7 +42,7 @@
             size_hint: 0.6, 0.25
             on_press: root.leave()
         Label:
-            text: "Exit"
+            text: root.exit
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
@@ -102,7 +102,7 @@
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'start'
         Label:
-            text: "Return"
+            text: root.return_
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
@@ -210,12 +210,12 @@
             on_press: root.manager.get_screen('game').reset_points_str()
             on_press: root.manager.current = 'game'
         Label:
-            text: "Color Mode"
+            text: root.color_mode
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.62}
         Label:
-            text: "Text Mode"
+            text: root.text_mode
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.45}
@@ -225,7 +225,7 @@
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'start'
         Label:
-            text: "Return"
+            text: root.return_
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
@@ -243,7 +243,7 @@
                 BoxLayout:
                     Label:
                         font_size: 18
-                        text: "Time Mode"
+                        text: root.time_mode_
                         color: 0,0,0,1
                     Switch:
                         on_active: root.sound_play()
@@ -416,30 +416,30 @@
             color: 0, 0, 0, 1
             font_size: 25
             bold: True
-            text: "You win !"
+            text: root.you_win_
         Label:
             pos_hint: {'center_x': 0.5, 'center_y': 0.6}
             color: 0, 0, 0, 1
             font_size: 20
             text: root.text_2
-            text: "time: " + app.text_2 + " seconds"
+            text: root.time_ + app.text_2 + root.seconds_
         Label:
             id: label_3
             pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             color: 0, 0, 0, 1
             font_size: 20
-            text: "Miss: " + app.text_3
+            text: root.miss_ + app.text_3
         Label:
             pos_hint: {'center_x': 0.5, 'center_y': 0.4}
             color: 0, 0, 0, 1
             font_size: 20
-            text: "Penality: 3x" + app.text_3 + " = " + app.text_4 + " seconds"
+            text: root.penality_ + app.text_3 + " = " + app.text_4 + root.seconds_
         Label:
             pos_hint: {'center_x': 0.5, 'center_y': 0.3}
             color: 0, 0, 0, 1
             font_size: 30
             bold: True
-            text: "Time final: " + app.text_5 + " seconds"
+            text: root.time_final_ + app.text_5 + root.seconds_
         Label:
             pos_hint: {'center_x': 0.5, 'center_y': 0.2}
             color: 0, 0, 0, 1
@@ -462,7 +462,7 @@
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'menu'
         Label:
-            text: "Return"
+            text: root.return_
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
@@ -472,7 +472,7 @@
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.6}
         Label:
-            text: "Color Word"
+            text: root.color_word
             font_size: 30
             bold: True
             color: 0,0,0,1
@@ -483,11 +483,11 @@
     FloatLayout:
         ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
-            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'menu-repeat'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
         Label:
-            text: "Return"
+            text: root.return_
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
@@ -497,7 +497,7 @@
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.6}
         Label:
-            text: "Color Repeat"
+            text: root.color_repeat
             font_size: 30
             bold: True
             color: 0,0,0,1
@@ -508,77 +508,77 @@
         source: os.getcwd() + "/data/CR_fond_P2.png"
     FloatLayout:
         Label:
-            pos_hint: {'center_x': 0.5, 'center_y': 0.8}
-            color: 0,0,0,1
-            font_size: 25
-            bold: True
             text: "No more Lifes !"
+            font_size: 25
+            color: 0,0,0,1
+            bold: True
+            pos_hint: {'center_x': 0.5, 'center_y': 0.8}
         ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
-            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'menu-repeat'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
         Label:
             text: "Return"
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
         Label:
-            pos_hint: {'center_x': 0.3, 'center_y': 0.5}
-            color: 0,0,0,1
+            text: app.new_record_color_repeat # "Level" or "New Record"
             font_size: 35
-            text: "Level"
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.3, 'center_y': 0.5}
         Label:
             id: scorelabel
             text: app.score_repeat
             font_size: 35
+            color: 0,0,0,1
             bold: True
-            color: 0,0,0,1
-            pos_hint: {'center_x': 0.6, 'center_y': 0.5}
+            pos_hint: {'center_x': 0.65, 'center_y': 0.5}
         Label:
-            pos_hint: {'center_x': 0.3, 'center_y': 0.4}
-            color: 0,0,0,1
-            font_size: 35
             text: app.old_record_color_repeat
+            font_size: 35
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.3, 'center_y': 0.4}
         Label:
             id: best_score
             text: root.scores_
             font_size: 35
-            bold: True
             color: 0,0,0,1
-            pos_hint: {'center_x': 0.6, 'center_y': 0.4}
-        Label:
-            text: app.new_record_color_repeat
-            font_size: 35
             bold: True
-            color: 0,0,0,1
-            pos_hint: {'center_x': 0.6, 'center_y': 0.60}
+            pos_hint: {'center_x': 0.65, 'center_y': 0.4}
+        #Label:
+         #   text: app.new_record_color_repeat
+          #  font_size: 35
+           # bold: True
+            #color: 0,0,0,1
+            #pos_hint: {'center_x': 0.6, 'center_y': 0.60}
 <ScoresColorWord>
     Image:
         source: os.getcwd() + "/data/ColorWord_fond.png"
     FloatLayout:
         ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
-            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'menu'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
         Label:
-            text: "Return"
+            text: root.return_
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
         Label:
             id: best_scores_color_word_color_label
             text: app.best_scores_color_word_color
+            color: 0,0,0,1
             font_size: 45
             bold: True
-            color: 0,0,0,1
             pos_hint: {'center_x': 0.80, 'center_y': 0.8}
         Label:
-            text: "High Score in Color mode: "
+            text: root.high_score_in_color_mode
             font_size: 22
-            bold: True
             color: 0,0,0,1
+            bold: True
             pos_hint: {'center_x': 0.36, 'center_y': 0.8}
 
         Label:
@@ -589,7 +589,7 @@
             color: 0,0,0,1
             pos_hint: {'center_x': 0.80, 'center_y': 0.5}
         Label:
-            text: "High Score in Text mode: "
+            text: root.high_score_in_text_mode
             font_size: 22
             bold: True
             color: 0,0,0,1
@@ -601,11 +601,11 @@
     FloatLayout:
         ButtonHelp:
             source: os.getcwd() + ("/data/Button-Return.png")
-            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'menu-repeat'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
         Label:
-            text: "Return"
+            text: root.return_
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
@@ -613,27 +613,27 @@
             id: best_scores_color_repeat_medium_label
             text: app.best_scores_color_repeat_medium
             font_size: 45
-            bold: True
             color: 0,0,0,1
+            bold: True
             pos_hint: {'center_x': 0.77, 'center_y': 0.8}
         Label:
-            text: "High Level in Medium mode: "
+            text: root.high_level_in_medium_mode
             font_size: 22
-            bold: True
             color: 0,0,0,1
+            bold: True
             pos_hint: {'center_x': 0.4, 'center_y': 0.8}
 
         Label:
             id: best_scores_color_repeat_hard_label
             text: app.best_scores_color_repeat_hard
             font_size: 45
-            bold: True
             color: 0,0,0,1
+            bold: True
             pos_hint: {'center_x': 0.77, 'center_y': 0.5}
         Label:
-            text: "High Level in Hard mode: "
+            text: root.high_level_in_hard_mode
             font_size: 22
-            bold: True
             color: 0,0,0,1
+            bold: True
             pos_hint: {'center_x': 0.4, 'center_y': 0.5}
 
